// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`query test: get @module-query/env exports 1`] = `
[
  "@module-query/env",
  "@module-query/env/editor",
  "@module-query/env/internal",
]
`;

exports[`query test: get all modules 1`] = `
[
  "@types/cc-ambient-types",
  "@module-query/env",
  "@module-query/utils",
]
`;

exports[`query test: get all modules exports 1`] = `
[
  "@types/cc-ambient-types",
  "@types/cc-ambient-types/query",
  "@module-query/env",
  "@module-query/env/editor",
  "@module-query/env/internal",
  "@module-query/utils",
]
`;

exports[`query test: get config 1`] = `
{
  "$schema": "../../../../../modules/modularize/lib/module-config.schema.json",
  "description": "",
  "exports": {
    ".": {
      "node": "./package.json",
      "types": "./src/index.ts",
    },
  },
  "license": "MIT",
  "name": "@module-query/utils",
  "scripts": {},
  "version": "1.0.0",
}
`;

exports[`query test: get export map 1`] = `
{
  "@module-query/env": "packages/@module-query/env/src/web/env.ts",
  "@module-query/env/editor": "packages/@module-query/env/src/editor-export/env.ts",
  "@module-query/env/internal": "packages/@module-query/env/src/internal-export/env.ts",
  "@module-query/utils": "packages/@module-query/utils/src/index.ts",
  "@types/cc-ambient-types": "@types/cc-ambient-types/src/index.d.ts",
  "@types/cc-ambient-types/query": "@types/cc-ambient-types/scripts/query.js",
}
`;

exports[`resolve custom export 1`] = `"packages/@module-query/env/src/custom/env2.ts"`;

exports[`resolve editor and internal export 1`] = `"packages/@module-query/env/src/editor-export/env.ts"`;

exports[`resolve editor and internal export 2`] = `"packages/@module-query/env/src/internal-minigame-export/env.ts"`;

exports[`resolve editor and internal export 3`] = `"packages/@module-query/env/src/internal-export/env.ts"`;

exports[`resolve package json 1`] = `"packages/@module-query/env/package.json"`;

exports[`resolve platform export 1`] = `"packages/@module-query/env/src/web/env.ts"`;

exports[`resolve platform export 2`] = `"packages/@module-query/env/src/web/env.ts"`;

exports[`resolve platform export 3`] = `"packages/@module-query/env/src/minigame/env.ts"`;

exports[`resolve platform export 4`] = `"packages/@module-query/env/src/runtime/env.ts"`;

exports[`resolve platform export 5`] = `"packages/@module-query/env/src/native/env.ts"`;

exports[`resolve platform export 6`] = `"packages/@module-query/env/src/native/env.ts"`;

exports[`resolve types export 1`] = `"packages/@module-query/utils/src/index.ts"`;
